# 71lbs-project

./: .env.example  .gitignore  ARCHITECTURE_NOTE.md  README.md  normalizer.py  pyproject.toml  requirements.txt  run_api.py  run_ingestion.py  run_pipeline.py  run_ui.py
.streamlit/: config.toml
app/: config.py  main.py
app/api/: routes.py
app/invoice/: __init__.py  accessorials.py  audit.py  audit_3pl.py  dim.py  (+8 more)
contract_parser/: __init__.py  main.py  pipeline.py  types.py
domain_models/: __init__.py  enums.py  example_usage.py  schema.sql  surcharges.py
extraction/: __init__.py  extractor.py  metadata_extractor.py
extraction_v2/: __init__.py  extractor.py  metadata_extractor.py  run_pipeline.py  table_parser.py
ingestion/: __init__.py  adapter.py  document.py  layout_parser.py  normalization.py  pdf_reader.py  section_classifier.py
models for later/: contract.py  example_usage.py  pricing.py
scripts/: download_das_zips.py  download_service_guides.py  download_zone_maps.py  refresh_reference_data.py  refresh_reference_data.sh  run_sample_e2e.py  scrape_fuel_surcharges.py
tests/: test_accessorials.py  test_dim_audit.py  test_e2e_integration.py  test_fuel_audit.py  test_gsr_audit.py  test_invoice_audit.py  test_llm_verifier.py  test_metadata_extractor_quality.py  test_pipeline_and_validation.py  test_production_hardening.py  test_resolver.py  test_table_extractor.py
validation/: __init__.py  confidence.py  issues.py  models.py  normalization.py  validators.py
vendors/: __init__.py  base.py  fedex.py  freight.py  registry.py  three_pl.py  ups.py
(+95 files in other folders)
